--- a/.stackbit/models/Page.yaml
+++ b/.stackbit/models/Page.yaml
@@ -1,6 +1,6 @@
-name: PageLayout
+name: Page
 label: Page
-layout: PageLayout
+layout: Page
 hideContent: true
 thumbnail: https://assets.stackbit.com/components/models/thumbnails/default.png
 fields:
