--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@mui/material": "^5.6.2",
         "front-matter": "^4.0.2",
         "glob": "^8.0.3",
+        "js-yaml": "^4.1.0",
         "markdown-to-jsx": "^7.1.7",
         "next": "^12.1.5",
         "react": "17.0.2",
