Upgrade to Stackbit v0.5.0, removed Sourcebit (#4)
* removed @stackbit/annotations
* removed sourcebit
* updated content utils
* updated dependencies
* updated stackbit.yaml to v0.5.0, removed unused files
* updated next.config.js
* Further tweaks & cleanup
* Remove un-needed layout attribute

Co-authored-by: Elad Rosenheim <elad@stackbit.com>

--- a/.stackbit/models/Page.yaml
+++ b/.stackbit/models/Page.yaml
@@ -1,6 +1,5 @@
-name: PageLayout
+name: Page
 label: Page
-layout: PageLayout
 hideContent: true
 thumbnail: https://assets.stackbit.com/components/models/thumbnails/default.png
 fields:
