--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "sideEffects": false,
     "scripts": {
         "dev": "next dev",
-        "build": "next build && next export",
+        "build": "next build",
         "start": "next start",
         "export": "next export",
-        "validate": "stackbit validate",
         "prettier": "prettier --write src"
     },
     "dependencies": {
@@ -21,17 +20,18 @@
         "@emotion/styled": "^11.8.1",
         "@mui/icons-material": "^5.6.2",
         "@mui/material": "^5.6.2",
-        "@stackbit/annotations": "^0.1.0",
-        "markdown-to-jsx": "^7.1.3",
+        "front-matter": "^4.0.2",
+        "glob": "^8.0.3",
+        "js-yaml": "^4.1.0",
+        "markdown-to-jsx": "^7.1.7",
         "next": "^12.1.5",
         "react": "17.0.2",
-        "react-dom": "17.0.2",
-        "sourcebit": "^0.11.1",
-        "sourcebit-source-filesystem": "^0.2.0",
-        "sourcebit-target-next": "^0.8.1"
+        "react-dom": "17.0.2"
     },
     "devDependencies": {
-        "@stackbit/cli": "^0.1.27",
+        "@types/glob": "^7.2.0",
+        "@types/js-yaml": "^4.0.5",
+        "@types/node": "^18.0.0",
         "@types/react": "^17.0.37",
         "autoprefixer": "^10.2.6",
         "eslint": "^7.29.0",
