--- a/package.json
+++ b/package.json
@@ -24,21 +24,21 @@
         "glob": "^8.0.3",
         "js-yaml": "^4.1.0",
         "markdown-to-jsx": "^7.1.7",
-        "next": "^12.3.1",
-        "react": "17.0.2",
-        "react-dom": "17.0.2"
+        "next": "^13.1.4",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
     },
     "devDependencies": {
-        "@types/glob": "^7.2.0",
+        "@types/glob": "^8.0.1",
         "@types/js-yaml": "^4.0.5",
         "@types/node": "^18.0.0",
-        "@types/react": "^17.0.37",
+        "@types/react": "^18.0.21",
         "autoprefixer": "^10.2.6",
         "eslint": "^7.29.0",
         "eslint-config-next": "^11.0.1",
         "eslint-config-prettier": "^8.3.0",
         "prettier": "^2.5.1",
-        "typescript": "^4.5.2"
+        "typescript": "^4.8.4"
     },
     "description": "A Nextjs page builder, component library and data source mapper all in one.",
     "main": "next.config.js",
