--- a/package.json
+++ b/package.json
@@ -29,14 +29,21 @@
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
+        "@stackbit/cms-core": "^0.1.19",
+        "@stackbit/sdk": "^0.3.14",
+        "@stackbit/types": "^0.1.9",
+        "@types/fs-extra": "^11.0.1",
         "@types/glob": "^8.0.1",
         "@types/js-yaml": "^4.0.5",
+        "@types/lodash": "^4.14.191",
         "@types/node": "^18.0.0",
         "@types/react": "^18.0.21",
         "autoprefixer": "^10.2.6",
         "eslint": "^7.29.0",
         "eslint-config-next": "^11.0.1",
         "eslint-config-prettier": "^8.3.0",
+        "fs-extra": "^11.1.0",
+        "lodash": "^4.17.21",
         "prettier": "^2.5.1",
         "typescript": "^4.8.4"
     },
