--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
+        "@stackbit/artisanal-names": "^1.0.1",
         "@stackbit/cms-core": "^0.1.19",
         "@stackbit/sdk": "^0.3.14",
         "@stackbit/types": "^0.1.9",
@@ -39,12 +40,14 @@
         "@types/node": "^18.0.0",
         "@types/react": "^18.0.21",
         "autoprefixer": "^10.2.6",
+        "axios": "^1.2.4",
         "eslint": "^7.29.0",
         "eslint-config-next": "^11.0.1",
         "eslint-config-prettier": "^8.3.0",
         "fs-extra": "^11.1.0",
         "lodash": "^4.17.21",
         "prettier": "^2.5.1",
+        "slugify": "^1.6.5",
         "typescript": "^4.8.4"
     },
     "description": "A Nextjs page builder, component library and data source mapper all in one.",
