--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
     "name": "mui-nextjs-starter",
     "version": "0.1.1",
     "engines": {
-        "node": ">=14",
-        "npm": ">=6"
+        "node": ">=16"
     },
     "sideEffects": false,
     "scripts": {
@@ -14,31 +13,31 @@
         "prettier": "prettier --write src"
     },
     "dependencies": {
-        "@emotion/cache": "^11.7.1",
-        "@emotion/react": "^11.9.0",
-        "@emotion/server": "^11.4.0",
-        "@emotion/styled": "^11.8.1",
-        "@mui/icons-material": "^5.6.2",
-        "@mui/material": "^5.6.2",
+        "@emotion/cache": "^11.10.5",
+        "@emotion/react": "^11.10.6",
+        "@emotion/server": "^11.10.0",
+        "@emotion/styled": "^11.10.6",
+        "@mui/icons-material": "^5.11.11",
+        "@mui/material": "^5.11.13",
         "front-matter": "^4.0.2",
-        "glob": "^8.0.3",
+        "glob": "^9.3.1",
         "js-yaml": "^4.1.0",
-        "markdown-to-jsx": "^7.1.7",
-        "next": "^13.1.4",
+        "markdown-to-jsx": "^7.2.0",
+        "next": "^13.2.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
-        "@types/glob": "^8.0.1",
+        "@types/glob": "^8.1.0",
         "@types/js-yaml": "^4.0.5",
-        "@types/node": "^18.0.0",
-        "@types/react": "^18.0.21",
-        "autoprefixer": "^10.2.6",
-        "eslint": "^7.29.0",
-        "eslint-config-next": "^11.0.1",
-        "eslint-config-prettier": "^8.3.0",
-        "prettier": "^2.5.1",
-        "typescript": "^4.8.4"
+        "@types/node": "^18.15.5",
+        "@types/react": "^18.0.28",
+        "autoprefixer": "^10.4.14",
+        "eslint": "^7.32.0",
+        "eslint-config-next": "^13.2.4",
+        "eslint-config-prettier": "^8.8.0",
+        "prettier": "^2.8.6",
+        "typescript": "^4.9.5"
     },
     "description": "A Nextjs page builder, component library and data source mapper all in one.",
     "main": "next.config.js",
