--- a/package.json
+++ b/package.json
@@ -13,25 +13,27 @@
         "prettier": "prettier --write src"
     },
     "dependencies": {
-        "@emotion/cache": "^11.10.5",
-        "@emotion/react": "^11.10.6",
-        "@emotion/server": "^11.10.0",
-        "@emotion/styled": "^11.10.6",
-        "@mui/icons-material": "^5.11.11",
-        "@mui/material": "^5.11.13",
+        "@emotion/cache": "^11.11.0",
+        "@emotion/react": "^11.11.0",
+        "@emotion/server": "^11.11.0",
+        "@emotion/styled": "^11.11.0",
+        "@mui/icons-material": "^5.11.16",
+        "@mui/material": "^5.13.0",
         "front-matter": "^4.0.2",
         "glob": "^9.3.1",
         "js-yaml": "^4.1.0",
         "markdown-to-jsx": "^7.2.0",
-        "next": "^13.2.4",
+        "next": "^13.4.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
+        "@stackbit/cms-git": "^0.3.2",
+        "@stackbit/types": "^0.6.2",
         "@types/glob": "^8.1.0",
         "@types/js-yaml": "^4.0.5",
-        "@types/node": "^18.15.5",
-        "@types/react": "^18.0.28",
+        "@types/node": "^20.1.3",
+        "@types/react": "^18.2.6",
         "autoprefixer": "^10.4.14",
         "eslint": "^7.32.0",
         "eslint-config-next": "^13.2.4",
