Rnd 2894 npm update (#49)
* updated package.json

--- a/package.json
+++ b/package.json
@@ -14,23 +14,23 @@
         "@emotion/react": "^11.11.1",
         "@emotion/server": "^11.11.0",
         "@emotion/styled": "^11.11.0",
-        "@mui/icons-material": "^5.14.7",
-        "@mui/material": "^5.14.7",
+        "@mui/icons-material": "^5.14.12",
+        "@mui/material": "^5.14.12",
         "front-matter": "^4.0.2",
         "glob": "^9.3.1",
         "js-yaml": "^4.1.0",
         "markdown-to-jsx": "^7.2.1",
-        "next": "^13.4.5",
+        "next": "13.4.19",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
-        "@stackbit/cms-git": "^0.3.25",
-        "@stackbit/types": "^0.10.4",
+        "@stackbit/cms-git": "^0.3.27",
+        "@stackbit/types": "^0.10.7",
         "@types/glob": "^8.1.0",
-        "@types/js-yaml": "^4.0.5",
-        "@types/node": "^20.3.1",
-        "@types/react": "^18.2.12",
+        "@types/js-yaml": "^4.0.6",
+        "@types/node": "^20.8.2",
+        "@types/react": "^18.2.25",
         "autoprefixer": "^10.4.16",
         "eslint": "^8.42.0",
         "eslint-config-next": "^13.4.5",
