--- a/content/data/config.json
+++ b/content/data/config.json
@@ -19,7 +19,7 @@
             {
                 "type": "Link",
                 "label": "Documentation",
-                "url": "https://docs.netlify.com/create/overview",
+                "url": "https://docs.netlify.com/visual-editor/overview/",
                 "underline": "hover"
             }
         ]
@@ -43,7 +43,7 @@
                 "type": "Link",
                 "label": "Documentation",
                 "underline": "hover",
-                "url": "https://docs.netlify.com/create/overview"
+                "url": "https://docs.netlify.com/visual-editor/overview/"
             }
         ]
     }
