--- a/package.json
+++ b/package.json
@@ -40,5 +40,6 @@
     },
     "description": "A Nextjs page builder, component library and data source mapper all in one.",
     "main": "next.config.js",
-    "license": "MIT"
+    "license": "MIT",
+    "type": "module"
 }
