--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
         "prettier": "prettier --write src"
     },
     "dependencies": {
-        "@emotion/cache": "^11.11.0",
-        "@emotion/react": "^11.11.4",
+        "@emotion/cache": "^11.14.0",
+        "@emotion/react": "^11.14.0",
         "@emotion/server": "^11.11.0",
-        "@emotion/styled": "^11.11.5",
-        "@mui/icons-material": "^6.1.1",
-        "@mui/material": "^6.1.1",
+        "@emotion/styled": "^11.14.0",
+        "@mui/icons-material": "^6.2.0",
+        "@mui/material": "^6.2.0",
         "front-matter": "^4.0.2",
         "glob": "^10.4.2",
         "js-yaml": "^4.1.0",
-        "markdown-to-jsx": "^7.5.0",
-        "next": "15.0.2",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "markdown-to-jsx": "^7.7.1",
+        "next": "^15.1.0",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0"
     },
     "devDependencies": {
         "@stackbit/cms-git": "^1.0.2",
@@ -30,10 +30,10 @@
         "@types/glob": "^8.1.0",
         "@types/js-yaml": "^4.0.9",
         "@types/node": "^22.7.4",
-        "@types/react": "^18.3.10",
+        "@types/react": "^19.0.1",
         "autoprefixer": "^10.4.19",
         "eslint": "^8.57.0",
-        "eslint-config-next": "^15.0.0",
+        "eslint-config-next": "^15.1.0",
         "eslint-config-prettier": "^9.1.0",
         "prettier": "^3.3.2",
         "typescript": "^5.4.5"
